# graphics

./: #CMakeLists.txt#  .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh  do.sh  main.cpp  run-debug.sh  run.sh
res/shaders/: #Basic.shader#  .#Basic.shader  Basic.shader
src/: main.cpp  test.shader
